syntax = "proto3";

package api.connector.v1;

option go_package = "arod-im/api/connector/v1;v1";
option java_multiple_files = true;
option java_package = "api.connector.v1";

service Connector {
	// PushMsg push by key or mid
	rpc SingleSend(SingleSendReq) returns (SingleSendReply);
	// Broadcast send to every enrity
	rpc GroupSend(GroupSendReq) returns (GroupSendReply);
	// BroadcastRoom broadcast to one room
	rpc RoomSend(RoomSendReq) returns (RoomSendReply);
	// Rooms get all rooms
	rpc Broadcast(BroadcastReq) returns (BroadcastReply);
}

message Proto {
	int32 ver = 1; // 版本号
	int32 op = 2; // 操作符
	int32 seq = 3; // 序列号
	bytes body = 4; // 消息体
}

message SingleSendReq {
	string address = 1;
	bytes msg = 2;
}
message SingleSendReply {
	string reply = 1;
}

message GroupSendReq{
	int32 protoOp = 1;
	Proto proto = 2;
	int32 speed = 3;
}
message GroupSendReply{}

message RoomSendReq {
	string roomID = 1;
	Proto proto = 2;
}
message RoomSendReply{}

message BroadcastReq{}
message BroadcastReply {
	map<string,bool> rooms = 1;
}